    - Added mining drill 3's! they have a 75% drain rate, a larger radius and an extra module slot, totaling to 5.
    - Added mixing tank 3's as well, unlocked in AA-ATM science. They are double the speed of mixing tank 2's.
    - Added a way to only grow a certain type of gem, unlocked in both A-AATM and AEM science.
    - Added a lot of recipe tints to recipes that are in chem/acid plants.

  Changes:
    - Changed vanilla rocket fuel into Solid rocket fuel.
    - Changed rocket fuel's acceleration modifier to 250%.
    - Changed rocket fuel's top speed modifier to 500%.
    - Changed rocket fuels fuel value to 25MJ.
    - Changed ruby/sapphire laser heads into modules for the electronic laser etcher.
    - Removed Jesus Marie, they're minerals! achievement.
    - Changed rocket fuels recipe to match what it actually should be.
    - Changed rocket fuel to have a stack size of 100.
    - Moved rocket control units into their correct subgroup.
    - Seperated circuit recipes into circuits (green, orange, red) and processing units (blue, purple, grey).
    - Changed "There is no spoon" and "No time for chitchat" to be actually doable in PM, and let them be doable by changing world settings
    - Changed tier 4 module recipes to take red and blue circuits instead of orange and blue.
    - Increased the power demand of the rocket silo from 4MW to 8MW.
    - Increased the amount of modules slots in a rocket silo from 4 to 5.
    - Updated all plastic icons to look more vanilla, and more better.
    - Also updated all plastic technology icons.
    - Updated almost all of the technology icons to now have shadows.
    - Changed the atmospheric condenser to have more output fluidboxes, to match its new model.
    - Changed the recipe of transistors to take less carbon and use 1 rubber.
    - Doubled amount of radium needed for AEM packs, which is still a better ratio then before.
    - Slightly lowered the profile growth of the coil heater.