@@ -7,6 +7,6 @@ event_handler.add_libraries{
 	require("runtime.periodic-fun"),
 	require("runtime.pollution-buildings"),
 	require("compatibility.automatic-underground-pipe-connectors"),
-	--require("runtime.requester-chest-storage"),
+	require("runtime.requester-chest-storage"),
 	--require("runtime.reactor-cooling"),
 }
