@@ -715,6 +715,7 @@ pm-coil-heater=Transmits coil effects to nearby compatable entities. Has a 1x1 r
 pm-osmium-pipe=Cannot connect to other pipes (e.g [img=item.pipe])
 pm-osmium-pipe-to-ground=Cannot connect to other pipes (e.g [img=item.pipe-to-ground])
 pm-electric-mining-drill-3=A more advanced mining drill that produces 25% more ore per ore, on top of existing productivity.
+requester-chest=Can gain more inventory slots via research. (Up to a max of 5)
 
 cooled-nuclear-reactor=Uses uranium fuel cells to generate heat. The heat output increases when built next to other reactors. Requires a constant stream of [img=fluid.water], [img=fluid.pm-coolant] or [img=fluid.pm-light-coolant] as coolant to stop it from exploding.
 cooled-pm-polonium-reactor=Uses polonium fuel cells to generate heat. The heat output increases when built next to other reactors. Requires a constant stream of [img=fluid.water], [img=fluid.pm-coolant] or [img=fluid.pm-light-coolant] as coolant to stop it from exploding.
@@ -1924,6 +1925,7 @@ pm-electronic-laser-etcher=Electronic laser etcher
 automation-science-pack=Transition metal science pack
 pm-geothermal-bore-MK2=Geothermal bore MK2
 pm-advanced-processing-unit=Advanced processing unit
+pm-requester-chest-inventory-bonus-capacity=Requester chest inventory bonus capacity
 
 pm-ferric-chloride-processing=Ferric chloride processing
 pm-advanced-chlorine-processing=Advanced chlorine processing
@@ -2135,6 +2137,7 @@ pm-liquid-rocket-fuel=After finally launching into space, you have the know-how 
 pm-electronic-laser-etcher=An advanced machine that uses lasers to mass-produce the most advanced circuit boards. It can also make those shoddy ones you created 80 hours ago.
 pm-geothermal-bore-MK2=A more advanced geothermal bore, which lasts longer then its predessecor.
 pm-advanced-processing-unit=The most advanced circuitry, using the most advanced materials.
+pm-requester-chest-inventory-bonus-capacity=Allows robots to store more things inside of requester chests.
 
 pm-ferric-chloride-processing=A compound of a ferrous metal and chlorine, used in cleaning waste water or acidic processes.
 pm-advanced-chlorine-processing=A more sophisticated way of making Hydrochloric acid, while using.. no chlorine.
@@ -2283,3 +2286,6 @@ pm-shotgun-slug-shooting-speed-bonus=Shotgun slug shooting speed: +__1__
 
 [pm-modifier]
 pm-requester-chest-inventory-size=Requester chest inventory size: +__1__
+
+[pm-descriptions]
+requester-chest-migration=Because you had [technology=logistic-system] unlocked before 0.8, all bonus requester chests slots have been unlocked. However, any items after the first 5 slots are in the trash slots and anything past the first 25 have been deleted.
