@@ -10664,7 +10664,7 @@ data.raw["logistic-container"]["active-provider-chest"].inventory_size = 64
 data.raw["logistic-container"]["passive-provider-chest"].inventory_size = 64
 data.raw["logistic-container"]["storage-chest"].inventory_size = 64
 data.raw["logistic-container"]["buffer-chest"].inventory_size = 64
-data.raw["logistic-container"]["requester-chest"].inventory_size = 64
+data.raw["logistic-container"]["requester-chest"].inventory_size = 1
 
 data.raw["rocket-silo"]["rocket-silo"].to_be_inserted_to_rocket_inventory_size = 2
 data.raw["rocket-silo"]["rocket-silo"].module_slots = 5
