@@ -24,6 +24,7 @@ Date: 2025-28-09
     - Added mixing tank 3's as well, unlocked in AA-ATM science. They are double the speed of mixing tank 2's.
     - Added a way to only grow a certain type of gem, unlocked in both A-AATM and AEM science.
     - Added a lot of recipe tints to recipes that are in chem/acid plants.
+    - Finally added the requester chest rework, which starts requester chests off at 1 slot and allows you to gain more slots via research (up to a max of 5 currently, but will increase over time)
 
   Changes:
     - Changed vanilla rocket fuel into Solid rocket fuel.
